# dedisp_tests

./: .gitignore  CMakeLists.txt  Documentation.md  Makefile.inc  README.md
cmake/: FindCUDAnvToolsExt.cmake  FindFFTW3.cmake
python/: CMakeLists.txt  run_benchmarks.py  run_benchmarks_analysis.py
src/: CMakeLists.txt  DedispPlan.cpp  DedispPlan.cu  DedispPlan.hpp  GPUPlan.cpp  GPUPlan.hpp  NOTICE  Plan.cpp  Plan.hpp  dedisp.cu  dedisp_defines.h  dedisp_error.cpp  dedisp_error.hpp  dedisp_kernels.cpp  dedisp_kernels.hpp  dedisp_types.h  gpu_memory.hpp  kernels.cuh
src/clib/: CMakeLists.txt  dedisp.c  dedisp.cpp  dedisp.h
src/common/: CMakeLists.txt  dedisp_defines.h  dedisp_strings.h  dedisp_types.h  helper.cpp  helper.h
src/common/cuda/: CMakeLists.txt  CU.cpp  CU.h
src/dedisp/: CMakeLists.txt  DedispPlan.cpp  DedispPlan.hpp
src/dedisp/dedisperse/: DedispKernel.hpp  dedisperse.cu  dedisperse.h  dedisperse_kernel.cuh
src/dedisp/transpose/: transpose.cuh  transpose.hpp  transpose_kernel.cuh
src/dedisp/unpack/: unpack.cu  unpack.h  unpack_kernel.cuh
src/dedisperse/: CMakeLists.txt  DedispKernel.cu  DedispKernel.hpp  dedisperse.cu  dedisperse.h  dedisperse_kernel.cuh
src/fdd/: CMakeLists.txt  FDDCPUPlan.cpp  FDDCPUPlan.hpp  FDDGPUPlan.cpp  FDDGPUPlan.hpp  FDDPlan.cpp  FDDPlan.hpp  chunk.cpp  chunk.h  helper.h
src/fdd/dedisperse/: FDDKernel.cu  FDDKernel.hpp  fdd_kernel.cuh
src/fdd/unpack/: unpack.cu  unpack.h  unpack_kernel.cuh
src/tdd/: CMakeLists.txt  TDDPlan.cpp  TDDPlan.hpp
src/tdd-ref/: CMakeLists.txt  DedispPlan.cpp  DedispPlan.hpp
src/tdd-ref/dedisperse/: CMakeLists.txt  dedisperse.cu  dedisperse.h  dedisperse_kernel.cuh
src/tdd-ref/transpose/: CMakeLists.txt
src/tdd-ref/unpack/: CMakeLists.txt  unpack.cu
src/tdd/dedisperse/: DedispKernel.cu  TDDKernel.cu  TDDKernel.hpp  dedisperse_kernel.cuh
src/tdd/unpack/: unpack.cu  unpack.h  unpack_kernel.cuh
src/transpose/: CMakeLists.txt  transpose.cu  transpose.cuh
src/unpack/: CMakeLists.txt  unpack.cu  unpack.h
